# direct-supply-weather-agent-kata

./: .env.example  README.md  package-lock.json  pyproject.toml
ai-services/data/: products.jsonl
ai_services/: README.md
ai_services/agent/: procurement_agent.py  prompts.py
ai_services/data_access/: loader.py
ai_services/schemas/: .gitkeep
ai_services/tools/: calculator.py  compliance_checker.py  product_search.py
backend/app/: config.py  main.py
backend/app/agent/: procurement_agent.py  prompts.py
backend/app/api/: chat.py
backend/app/data/: EDGE_CASES.md  contracts.jsonl  inventory.jsonl  policy.txt  products.jsonl
backend/app/data_access/: loader.py
backend/app/schemas/: compliance_assessment.py  product.py  product_order.py  request.py  response.py
backend/app/services/: agent.py
backend/app/tools/: calculator.py  compliance_checker.py  product_search.py
backend/db/: schema.sql
db/: schema.sql
docs/: agent-flow.md  architecture.md  decisions.md  local-testing.md  problem-solution.md  sample-questions.md  user-stories.md
frontend/app/: globals.css  layout.tsx
frontend/components/: ChatWindow.tsx  MessageBubble.tsx
frontend/services/: apiClient.ts
notebooks/: poc.ipynb
src/schemas/: compliance_assessment.py  product.py
