[project]
name = "directsupply-chatbot-kata"
version = "0.1.0"
description = "This project is designed to demonstrate an agentic AI-assisted approach to food procurement workflows in healthcare and senior living environments, aligned with Direct Supply and DSSI’s real-world use cases."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.9",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.8",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
